
2021-02-01  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed to set default file sharing as the COBOL standard
				Set flag to request commit/rollback if COB_LOCK_ROLLBACK is set
	* fodbc.c: Report line number in debuglog file a bit more often

2021-01-28  James K. Lowden  <jklowden@symas.com>

	* sysdefines.h (GC_C_VERSION): let "unknown" be token-pasted, too

2021-01-28  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: Fixes to handle hundreds of seconds and TIME only fields

2021-01-26  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: Fixes to handle COMP-6
			If PIC 9 field is all SPACES, then store in SQL as ZERO.
			Fix field defined as a DATE that had all zeros or nines.
			If PIC X field is LOW-VALUES then column is set to NULL

2021-01-23  Ron Norman <rjn@inglenet.com>

	* common.c: If not using --enable-debuglog then compile
			the cob_debug routines are basically empty
	* fodbc.c,fsqlxfd.c: Additional update for SQLite and now includes
			support for COMMIT/ROLLBACK

2021-01-22  Ron Norman <rjn@inglenet.com>

	* Makefile.am: corrections to changes previously made
	* fileio.c: report any error from loading a module that should be present

2021-01-22  Ron Norman <rjn@inglenet.com>

	* common.c: Add check for COB_DEBUG_LOG not defined
	* fodbc.c,fsqlxfd.c: set db->no_for_update for SQLite

2021-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: changes for delay-load libraries (INDEXED)
	  pass specific CFLAGS and LDFLAGS, link against libcob, lt-version 1
	* fileio.c (io_rtns): module name with environment specific prefix
	  and suffix
	* fileio.h externalized file_globptr, file_setptr
	* fisam.c: externalized cob_isam_init_fileio
	* call.c (cob_load_lib): nicer error output
	* fileio.c: adjusted error handling for module load: don't exit on errors
	  in cob_load_module but handle error after calling it
	* fileio.c, coblocal.h: added cob_io_name, extend cob_io_version to
	  output a verbose error upon request